nvml-wrapper-sys/src/bindings/linux.rs

#[test]
fn bindgen_test_layout_nvmlAccountingStats_st() {
    assert_eq!(::std::mem::size_of::<nvmlAccountingStats_st>() , 56usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlAccountingStats_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlAccountingStats_st>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlAccountingStats_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                gpuUtilization as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( gpuUtilization ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                memoryUtilization as * const _ as usize } , 4usize , concat !
                (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( memoryUtilization ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                maxMemoryUsage as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( maxMemoryUsage ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . time as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( time ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . startTime as
                * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( startTime ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . isRunning as
                * const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( isRunning ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . reserved as
                * const _ as usize } , 36usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( reserved ) ));
}
impl Clone for nvmlAccountingStats_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlAccountingStats_t = nvmlAccountingStats_st;
extern "C" {
    pub fn nvmlInit_v2() -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlShutdown() -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlErrorString(result: nvmlReturn_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn nvmlSystemGetDriverVersion(version: *mut ::std::os::raw::c_char,
                                      length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetNVMLVersion(version: *mut ::std::os::raw::c_char,
                                    length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetProcessName(pid: ::std::os::raw::c_uint,
                                    name: *mut ::std::os::raw::c_char,
                                    length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetCount(unitCount: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetHandleByIndex(index: ::std::os::raw::c_uint,
                                    unit: *mut nvmlUnit_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetUnitInfo(unit: nvmlUnit_t, info: *mut nvmlUnitInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetLedState(unit: nvmlUnit_t, state: *mut nvmlLedState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetPsuInfo(unit: nvmlUnit_t, psu: *mut nvmlPSUInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetTemperature(unit: nvmlUnit_t,
                                  type_: ::std::os::raw::c_uint,
                                  temp: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetFanSpeedInfo(unit: nvmlUnit_t,
                                   fanSpeeds: *mut nvmlUnitFanSpeeds_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetDevices(unit: nvmlUnit_t,
                              deviceCount: *mut ::std::os::raw::c_uint,
                              devices: *mut nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetHicVersion(hwbcCount: *mut ::std::os::raw::c_uint,
                                   hwbcEntries: *mut nvmlHwbcEntry_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCount_v2(deviceCount: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByIndex_v2(index: ::std::os::raw::c_uint,
                                         device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleBySerial(serial: *const ::std::os::raw::c_char,
                                       device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByUUID(uuid: *const ::std::os::raw::c_char,
                                     device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByPciBusId_v2(pciBusId:
                                                *const ::std::os::raw::c_char,
                                            device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetName(device: nvmlDevice_t,
                             name: *mut ::std::os::raw::c_char,
                             length: ::std::os::raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBrand(device: nvmlDevice_t,
                              type_: *mut nvmlBrandType_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetIndex(device: nvmlDevice_t,
                              index: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSerial(device: nvmlDevice_t,
                               serial: *mut ::std::os::raw::c_char,
                               length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCpuAffinity(device: nvmlDevice_t,
                                    cpuSetSize: ::std::os::raw::c_uint,
                                    cpuSet: *mut ::std::os::raw::c_ulong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetCpuAffinity(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceClearCpuAffinity(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTopologyCommonAncestor(device1: nvmlDevice_t,
                                               device2: nvmlDevice_t,
                                               pathInfo:
                                                   *mut nvmlGpuTopologyLevel_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTopologyNearestGpus(device: nvmlDevice_t,
                                            level: nvmlGpuTopologyLevel_t,
                                            count:
                                                *mut ::std::os::raw::c_uint,
                                            deviceArray: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetTopologyGpuSet(cpuNumber: ::std::os::raw::c_uint,
                                       count: *mut ::std::os::raw::c_uint,
                                       deviceArray: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetP2PStatus(device1: nvmlDevice_t,
                                  device2: nvmlDevice_t,
                                  p2pIndex: nvmlGpuP2PCapsIndex_t,
                                  p2pStatus: *mut nvmlGpuP2PStatus_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetUUID(device: nvmlDevice_t,
                             uuid: *mut ::std::os::raw::c_char,
                             length: ::std::os::raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMinorNumber(device: nvmlDevice_t,
                                    minorNumber: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBoardPartNumber(device: nvmlDevice_t,
                                        partNumber:
                                            *mut ::std::os::raw::c_char,
                                        length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomVersion(device: nvmlDevice_t,
                                       object: nvmlInforomObject_t,
                                       version: *mut ::std::os::raw::c_char,
                                       length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomImageVersion(device: nvmlDevice_t,
                                            version:
                                                *mut ::std::os::raw::c_char,
                                            length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomConfigurationChecksum(device: nvmlDevice_t,
                                                     checksum:
                                                         *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceValidateInforom(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDisplayMode(device: nvmlDevice_t,
                                    display: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDisplayActive(device: nvmlDevice_t,
                                      isActive: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPersistenceMode(device: nvmlDevice_t,
                                        mode: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPciInfo_v2(device: nvmlDevice_t,
                                   pci: *mut nvmlPciInfo_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxPcieLinkGeneration(device: nvmlDevice_t,
                                              maxLinkGen:
                                                  *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxPcieLinkWidth(device: nvmlDevice_t,
                                         maxLinkWidth:
                                             *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrPcieLinkGeneration(device: nvmlDevice_t,
                                               currLinkGen:
                                                   *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrPcieLinkWidth(device: nvmlDevice_t,
                                          currLinkWidth:
                                              *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPcieThroughput(device: nvmlDevice_t,
                                       counter: nvmlPcieUtilCounter_t,
                                       value: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPcieReplayCounter(device: nvmlDevice_t,
                                          value: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
